REOPENED304091
REGRESSION (301471@main): replay.music.apple.com highlight reels has missing assets
https://bugs.webkit.org/show_bug.cgi?id=304091
Summary REGRESSION (301471@main): replay.music.apple.com highlight reels has missing ...
Simon Fraser (smfr)
Reported 2025-12-12 15:30:42 PST
The highlight reel at replay.music.apple.com (login required) is missing assets after 301471@main It uses `document.fonts.ready`, but also relies on `loadingdone` events which we don't fire.
Attachments
Simon Fraser (smfr)
Comment 1 2025-12-12 15:31:55 PST
Simon Fraser (smfr)
Comment 2 2025-12-12 15:39:26 PST
Simon Fraser (smfr)
Comment 3 2025-12-12 15:59:01 PST
*** Bug 184138 has been marked as a duplicate of this bug. ***
EWS
Comment 4 2026-01-09 09:24:44 PST
Committed 305367@main (4058ab9ae8ca): <https://commits.webkit.org/305367@main> Reviewed commits have been landed. Closing PR #55333 and removing active labels.
Alexey Proskuryakov
Comment 5 2026-01-14 11:16:25 PST
*** Bug 305470 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6 2026-02-11 18:20:39 PST
This got reverted in 305988@main
Alex Dixon
Comment 7 2026-02-12 07:47:36 PST
Heads up that I've created an MDN documentation issue related to this: https://github.com/mdn/browser-compat-data/issues/29035 When this is fixed, you'll probably want to file another issue to have that updated assuming those docs get updated.
Note You need to log in before you can comment on or make changes to this bug.