REGRESSION (301471@main): replay.music.apple.com highlight reels has missing assets https://bugs.webkit.org/show_bug.cgi?id=304091 rdar://166322852

Reviewed by NOBODY (OOPS!).

301471@main made FontFaceSet promises work, but broke replay.music.apple.com which also requires
`loadingdone` events firing.

To fix this we need to implement more of the CSS Fonts Loading spec, specifically firing
`loadingdone` and `loadingerror` events, which has a `fontfaces` property. For this we need
an `Event` subclass, and FontFaceSetLoadEventInit per spec, so add IDL and implementations
for those. FontFaceSetLoadEvent has `JSCustomMarkFunction` and implements `visitAdditionalChildren`
to keep the referenced FontFaces alive.

The spec is rather confused[2] about the timing of event firing, but match the other browsers
by firing events before the promise resolves. Because this can happen during layout as
a result of font fallback, we need to run both the event dispatch and promise resolution
in a queued task. This also requires that `FontFaceSet` maintains the LoadingStatus, because
its state changes in queued tasks, which CSSFontFaceSet knows nothing about. The status
also depends on the contents of the `loadingFonts` list; `FontFaceSet` now maintains
the three font lists per spec.

We now eagerly create FontFace wrappers for CSSFontFace objects, since we add them
to the `loading` and `loadingdone` events anyway.

Handle FontFaces moving between documents, which wasn't explicitly handled before; we need
to call ActiveDOMObject's `didMoveToNewDocument()`, but we also need to disassociate from
the CSSFontFace in the old Document, and be adopted by one in the new Document. This does
not currently preserve the font data.

Implement more of the spec language, around "switch the state to loading/loaded",
and "stuck on the environment". fast/text/font-loading-multiple-sets.html needs to work
around webkit.org/b/304381 to avoid remaining stuck.

Hack TestInvocation to not trigger frame load callbacks, and reset results.

Some of this is based on code written by Frédéric Wang in webkit.org/b/184138.

[1] https://www.w3.org/TR/css-font-loading/
[2] https://github.com/w3c/csswg-drafts/issues/13209

Test: imported/w3c/web-platform-tests/css/css-font-loading/fontface-loading-events.html

* LayoutTests/fast/text/FontFaceSet-status-after-style-update-expected.txt:
* LayoutTests/fast/text/FontFaceSet-status-after-style-update.html:
* LayoutTests/fast/text/font-face-set-javascript.html:
* LayoutTests/fast/text/font-loading-multiple-sets.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/empty-family-load-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-fonts-loading-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-load-in-modal-dialog-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-loading-events-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-loading-events.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-loadingevent-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-loadingevent.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontface-override-descriptor-getter-setter.sub-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-add-css-connected-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-clear-css-connected-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-delete-css-connected-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-has-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-css-connected-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-css-wide-keywords-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-load-var-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfaceset-update-after-stylesheet-change-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/fontfacesetloadevent-constructor-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/idlharness.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-font-loading/nonexistent-file-url-expected.txt:
* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Modules/mediacontrols/MediaControlsHost.h: Unified build fix.
* Source/WebCore/Modules/webauthn/PublicKeyCredentialCreationOptionsJSON.h: Unified sources build fix.
* Source/WebCore/SaferCPPExpectations/UncountedLambdaCapturesCheckerExpectations: Add css/StyleRule.cpp
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/bindings/js/JSFontFaceSetLoadEventCustom.cpp: Added.
(WebCore::JSFontFaceSetLoadEvent::visitAdditionalChildren):
* Source/WebCore/css/CSSFontFace.cpp:
(WebCore::CSSFontFace::existingWrapper const):
(WebCore::CSSFontFace::willMoveToNewDocument):
(WebCore::CSSFontFace::fontLoaded):
(WebCore::CSSFontFace::load):
(WebCore::CSSFontFace::existingWrapper): Deleted.
* Source/WebCore/css/CSSFontFace.h:
(WebCore::CSSFontFaceClient::fontWillMoveToNewDocument):
* Source/WebCore/css/CSSFontFaceSet.cpp:
(WebCore::CSSFontFaceSet::incrementActiveCount):
(WebCore::CSSFontFaceSet::decrementActiveCount):
(WebCore::CSSFontFaceSet::add):
(WebCore::CSSFontFaceSet::remove):
(WebCore::CSSFontFaceSet::clear):
(WebCore::CSSFontFaceSet::fontStateChanged):
(WebCore::CSSFontFaceSet::fontWillMoveToNewDocument):
* Source/WebCore/css/CSSFontFaceSet.h:
* Source/WebCore/css/FontFace.cpp:
(WebCore::FontFace::create):
(WebCore::FontFace::willMoveToNewDocument):
(WebCore::root):
* Source/WebCore/css/FontFace.h:
* Source/WebCore/css/FontFaceSet.cpp:
(WebCore::FontFaceSet::Iterator::Iterator):
(WebCore::FontFaceSet::Iterator::next):
(WebCore::FontFaceSet::PendingPromise::PendingPromise):
(WebCore::FontFaceSet::create):
(WebCore::FontFaceSet::FontFaceSet):
(WebCore::FontFaceSet::setInitialState):
(WebCore::FontFaceSet::documentDidFinishLoading):
(WebCore::FontFaceSet::isPendingOnEnvironment const):
(WebCore::FontFaceSet::stopPendingOnEnvironment):
(WebCore::FontFaceSet::clear):
(WebCore::FontFaceSet::load):
(WebCore::FontFaceSet::faceDidStartLoading):
(WebCore::FontFaceSet::faceDidFinishLoading):
(WebCore::FontFaceSet::didAddFace):
(WebCore::FontFaceSet::didDeletedFace):
(WebCore::FontFaceSet::startedLoading):
(WebCore::FontFaceSet::completedLoading):
(WebCore::FontFaceSet::switchStateToLoading):
(WebCore::FontFaceSet::switchStateToLoaded):
(WebCore::FontFaceSet::status const): Deleted.
(WebCore::FontFaceSet::faceFinished):
* Source/WebCore/css/FontFaceSet.h:
* Source/WebCore/css/FontFaceSetLoadEvent.cpp: Added.
(WebCore::FontFaceSetLoadEvent::FontFaceSetLoadEvent):
* Source/WebCore/css/FontFaceSetLoadEvent.h: Added.
* Source/WebCore/css/FontFaceSetLoadEvent.idl: Copied from Source/WebCore/Modules/webauthn/PublicKeyCredentialCreationOptionsJSON.h.
* Source/WebCore/css/FontFaceSetLoadEventInit.h: Added.
* Source/WebCore/css/FontFaceSetLoadEventInit.idl: Copied from Source/WebCore/Modules/webauthn/PublicKeyCredentialCreationOptionsJSON.h.
* Source/WebCore/dom/Document.cpp:
(WebCore::Document::implicitClose):
* Source/WebCore/dom/EventInterfaces.in:
* Tools/WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::TestInvocation):